# veloce

./: Cargo.toml  README.md
.github/workflows/: bench.yaml  benchmark.yml
benches/: main.rs
benches/spsc/: burst.rs  create.rs  latency.rs  main.rs  oneshot.rs  seq_inout.rs  slow_consumer.rs  small_buffer.rs  throughput.rs
dev/bench/: data.js  data.json  index.html
dev/bench/assets/: git-bench-dashboard-dxh2f1af051766560c.js  git-bench-dashboard-dxh6a598658f9b6e3ea.js  git-bench-dashboard-dxh7058345bb699c4c3.js  git-bench-dashboard-dxh7d27c22a5dcb677.js  git-bench-dashboard-dxh7d81aff9ed2f325.js  git-bench-dashboard-dxha6cc458ad61fb3f.js  git-bench-dashboard-dxhab527134fe55df6d.js  git-bench-dashboard-dxhc4399b77a0ceedbb.js  git-bench-dashboard-dxhc7725b3a66ec716.js  git-bench-dashboard-dxhd839ddeab9ff8934.js  git-bench-dashboard-dxhe9576861550292f.js  git-bench-dashboard-dxhfaa9aa285cc11f66.js  git-bench-dashboard_bg-dxh1221bcbfe9bd256.wasm  git-bench-dashboard_bg-dxh216c1426ab5c6e19.wasm  git-bench-dashboard_bg-dxh2f86acf79d342fdf.wasm  git-bench-dashboard_bg-dxh553fe8fb41f3a73b.wasm  git-bench-dashboard_bg-dxh6135f8f53d89b053.wasm  git-bench-dashboard_bg-dxh6d502cc31b871262.wasm  git-bench-dashboard_bg-dxh75726c66efdbd417.wasm  git-bench-dashboard_bg-dxh850b3b2766fe253.wasm  git-bench-dashboard_bg-dxha8e77fe2e79a74c.wasm  git-bench-dashboard_bg-dxhd14393488a8bc83f.wasm  git-bench-dashboard_bg-dxhdfe2d4253624bc59.wasm  git-bench-dashboard_bg-dxhf1fde942a259c9e8.wasm
src/: lib.rs  ring.rs
src/spsc/: channel.rs  mod.rs  receiver.rs  sender.rs  slot.rs
src/spsc/lamport/: channel.rs  error.rs  mod.rs  receiver.rs  sender.rs
src/spsc/vyukov/: channel.rs  error.rs  mod.rs  receiver.rs  sender.rs  slot.rs
