[package]
name = "veloce"
version = "0.1.0"
edition = "2024"

[features]
default = []
async = ["futures"]

[dependencies]
crossbeam-utils = "0.8.21"
futures = { version = "0.3.31", optional = true }
paste = "1.0.15"

[dev-dependencies]
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
