[package]
name = "veloce"
version = "0.1.0"
edition = "2024"
description = "Performant data structures in Rust"
keywords = ["lock-free", "spsc", "channel", "async", "no-std"]
categories = ["concurrency", "data-structures", "asynchronous"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fedemagnani/veloce"

[features]
default = []
async = ["futures"]

[dependencies]
crossbeam-utils = "0.8.21"
flume = { version = "0.12.0", features = ["spin"] }
futures = { version = "0.3.31", optional = true }
kanal = "0.1.1"
paste = "1.0.15"

[dev-dependencies]
criterion = "0.8.1"
crossbeam-channel = "0.5.15"
num_cpus = "1.17.0"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
